Fix the height of thumnail captions for better alignement.

--- a/css/style.less
+++ b/css/style.less
@@ -189,7 +189,10 @@ input, textarea, select {
   padding: 0;
   overflow: hidden;
 
-  h3 {font-weight: normal;}
+  h3 {
+    font-weight: normal;
+    height: 54px;
+  }
 }
 
 .nb-comments, .nb-hits { font-weight: normal; }
